--- a/ace/docker-compose.yml
+++ b/ace/docker-compose.yml
@@ -15,6 +15,12 @@ volumes:
     driver: local
 
 services:
+  gluster-plugin-load:
+    image: brodintel/ace-glusterfs-plugin:1.1
+    entrypoint: ["bash", "-c"]
+    command: ["exit"]
+    restart: "no"
+
   core:
     image: brodintel/ace-core:1.1
     privileged: true
@@ -102,17 +108,6 @@ services:
       - serf-agent
       - core
 
-  gluster-security-enabler:
-    image:  brodintel/ace-console-alpine:1.1
-    # To enable glusterd network encryption, uncomment the below line
-    entrypoint: [sh, -c, "touch /var/lib/glusterd/secure-access"]
-    restart: "no"
-    volumes:
-      - gluster_database_vol:/var/lib/glusterd
-    depends_on:
-      - app-docker
-      - gluster-rest
-
   gluster-rest:
     image: brodintel/ace-glusterfs-rest:7.1
     command: ["--certfile","/etc/ssl/glusterrestd.pem" ,"--keyfile", "/etc/ssl/glusterrestd.key", "--ca-certs", "/etc/ssl/glusterfs.ca"]
@@ -160,27 +155,22 @@ services:
     depends_on:
       - app-docker
       - gluster-rest
-      - gluster-security-enabler
       - core
 
   gluster-plugin-install:
-    image: docker:19.03.12
-    entrypoint: [sh, -c, /opt/ace/gluster/gluster-plugin-install.sh]
+    image: brodintel/ace-core:1.1
+    entrypoint: ["/bin/bash", "-c"]
+    command: ["/ace/gluster/gluster-plugin-install.sh"]
     environment:
       - ACE_BASE_PATH=/opt/ace
-      - PLUGIN_NAME=ace/glusterfs-plugin
-      - PLUGIN_TAG=1.0
+      - PLUGIN_NAME=brodintel/ace-glusterfs-plugin
+      - PLUGIN_TAG=1.1
       - CREDS_DIR=/etc/ace
       - TLS_KEY=/etc/ssl/plugin.key
       - TLS_CERT=/etc/ssl/plugin.pem
       - TLS_CACERT=/etc/ssl/glusterfs.ca
       - SYSTEM_DOCKER_SOCK=/aux/system-docker.sock
     restart: "no"
-    # ipc: host
-    # network_mode: host
-    # pid: host
-    # privileged: true
-    # userns_mode: host
     volumes:
       - docker_pid_vol:/var/run
       - /var/run/docker.sock:/aux/system-docker.sock
