--- a/x11/docker-compose-any.yml
+++ b/x11/docker-compose-any.yml
@@ -6,6 +6,12 @@ services:
     environment:
       - DISPLAY
       - VNC=true
+      - HTTP_PROXY=${HTTP_PROXY}
+      - HTTPS_PROXY=${HTTPS_PROXY}
+      - NO_PROXY=${NO_PROXY}
+      - http_proxy=${http_proxy}
+      - https_proxy=${https_proxy}
+      - no_proxy=${no_proxy}
     ipc: host
     network_mode: host
     pid: host
